k8s/base/frontent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2  # Number of frontend instances
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: your-frontend-image:latest  # Or build it locally using a Dockerfile and push it to a registry
        ports:
        - containerPort: 80
