k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000  # Port that will be used inside the cluster to access the backend
    targetPort: 5000  # Port that the backend container listens on
